remove prints and extras

--- a/new_window.kv
+++ b/new_window.kv
@@ -19,7 +19,7 @@ Organizer:
         Label:
             size: self.texture_size
             color: "#C34A36"
-            text: "Hey there! What can I call you?"
+            text: "Hey there! What can I call you? (You can leave this empty if you would like.)"
             font_size: 20
 
         TextInput:
